@@ -40,6 +40,7 @@
 #define ID_OPEN		   12
 #define ID_REPOBROWSE  13
 #define ID_DELETE	   14
+#define ID_IGNORE	   15
 
 #define ID_DIFF			20
 
